mise à jour de l'accueil

--- a/Drawmong-Us/src/main/webapp/css/home.css
+++ b/Drawmong-Us/src/main/webapp/css/home.css
@@ -7,6 +7,10 @@ h1 {
     font-size: 50px;
 }
 
+button{
+    border-radius: 5px;
+}
+
 .BaseInterface{
     padding: 30px;
     background-color: azure;
