police + intégration du chat
-ajout d'une police d'écriture dans le thème à la page paint
-ajout du chat dans la page paint

--- a/Drawmong-Us/src/main/webapp/css/paint.css
+++ b/Drawmong-Us/src/main/webapp/css/paint.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,900&display=swap');
+
+body{
+    font-family: 'Nunito', Arial, sans-serif;
+}
+
 .Button{
     display:block;
 }
@@ -46,3 +52,13 @@
     display: inline-block;
 }
 
+.ChatBox{
+    border-width: 2px;
+    border-style:solid;
+    border-color: gray(0);
+    display: inline-block;
+}
+
+#log{
+    width: 400px;
+}
