--- a/Drawmong-Us/src/main/webapp/css/create_game.css
+++ b/Drawmong-Us/src/main/webapp/css/create_game.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,900&display=swap');
+
+body{
+    font-family: 'Nunito', Arial, sans-serif;
+}
+
 #logo {
     width: 50vw;
     margin-top: 1rem;
