--- a/Drawmong-Us/src/main/webapp/css/home.css
+++ b/Drawmong-Us/src/main/webapp/css/home.css
@@ -1,4 +1,7 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,900&display=swap');
+
+body{
+    font-family: 'Nunito', Arial, sans-serif;
     background-color: rgb(191, 153, 226);
 }
 
