--- a/Drawmong-Us/src/main/webapp/css/main.css
+++ b/Drawmong-Us/src/main/webapp/css/main.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,900&display=swap');
+
+body{
+    font-family: 'Nunito', Arial, sans-serif;
+}
+
 div {
     margin: 20px;
 }
