--- a/Drawmong-Us/src/main/webapp/css/paint.css
+++ b/Drawmong-Us/src/main/webapp/css/paint.css
@@ -10,7 +10,13 @@ body {
 
 h1 {
     text-align: center;
+    vertical-align: text-top;
     font-size: 50px;
+}
+
+h2 {
+    font-size: 50px;
+    text-align: center;
 }
 
 .Button {
@@ -22,7 +28,7 @@ h1 {
     border-width: 2px;
     border-style: solid;
     border-radius: 10px;
-    border-color: gray(0);
+    border-color: black;
     display: inline-block;
 }
 
@@ -33,6 +39,8 @@ h1 {
     border-radius: 10px;
     border-color: black;
     display: inline-block;
+    background-color: #9131a8;
+    margin-bottom: 5px;
 }
 
 .Color {
@@ -42,6 +50,10 @@ h1 {
     border-style: solid;
     border-color: black;
     display: inline-block;
+}
+
+.Disparu{
+    display:none;
 }
 
 .Eraser_click {
@@ -66,7 +78,7 @@ h1 {
     border-width: 2px;
     border-style: solid;
     border-radius: 10px;
-    border-color: gray(0);
+    border-color: black;
     display: inline-block;
 }
 
@@ -74,15 +86,32 @@ h1 {
     border-width: 2px;
     border-style: solid;
     border-radius: 10px;
-    border-color: gray(0);
-    display: inline-block;
+    border-color: black;
+    display:inline-block;
+    margin-bottom: 1px;
 }
 
-#boiteChat{
+#boiteChat {
     margin:4px;
+}
+
+#envoiMes {
+    display:block;
+}
+
+#interface {
+    display: inline-block;
 }
 
 #log {
     resize: none;
-    width: 400px;
+    width: 500px;
+}
+
+#msg {
+    border-bottom-left-radius: 10px;
+}
+
+#titreChat{
+    display:grid;
 }
