--- a/Drawmong-Us/src/main/webapp/css/base.css
+++ b/Drawmong-Us/src/main/webapp/css/base.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,900&display=swap');
-
 body,head{
     font-family: 'Nunito', Arial, sans-serif;
     margin:0;
@@ -11,6 +9,10 @@ html, body {
 
 body, body::backdrop, body:fullscreen {
     background-color: #badeb8;
+}
+
+.settings-form{
+    display: none;
 }
 
 .content-wrapper {
@@ -114,4 +116,15 @@ and (min-device-width: 375px) and (max-device-width: 812px),
     h2 {
         font-size: 2rem;
     }
+}
+
+.Joueurs{
+    background-color: #1883ba;
+    display: none;
+    border-radius: 10px;
+    border-width:2px;
+    border-style:solid;
+    border-color:black;
+    margin: 10px;
+    max-width: 500px;
 }
